--- a/app/views/products/helpers/_kpis.html.erb
+++ b/app/views/products/helpers/_kpis.html.erb
@@ -3,10 +3,10 @@
 
   <div class="flash info l_margin_bottom_5" >
     <b>Current:</b>
-    <% if @current_version && !@current_version.to_s.eql?(@product.version.to_s) %>
-      <a href="/<%= @product.language_esc %>/<%= @product.to_param %>/<%= @current_version.to_s %>" ><%= @current_version.to_s %></a>
+    <% if @product.version_newest && !@product.version_newest.to_s.eql?(@product.version.to_s) %>
+      <a href="/<%= @product.language_esc %>/<%= @product.to_param %>/<%= @product.version_newest.to_s %>" ><%= @product.version_newest.to_s %></a>
     <% else %>
-      <%= @current_version.to_s %>
+      <%= @product.version_newest.to_s %>
     <% end %>
   </div>
 
