--- a/app/views/page/faq.html.erb
+++ b/app/views/page/faq.html.erb
@@ -36,6 +36,22 @@
       Besides, we do this only for the repositories you have choosen. We will never scan ALL your repositories automatically, like some of our competitors. We only scan the repositories and branches you have selected.<br/>
       If you're still suspicious, simply use the file upload or URL feature to submit your project files. With those 2 features we don't get any access to your source code.
     </p>
+
+    <h2>How quick do notifications happen?</h2>
+    <p class="l_faq_section">
+      There are 2 kinds of notifications at VersionEye. The <b>follow</b> notifications and the <b>project</b> notifications. 
+    </p>
+    <p class="l_faq_section">
+      The <b>follow</b> notifications you receive once a day. Assume you are following 100 software packages at VersionEye and 20 of them 
+      release a new version today. In that case we will not send you 20 emails ;-) You will receive just 1 single email which contains the notifications for today! If there are no <b>follow</b> notifications for you, we don't send out an email!
+    </p>
+    <p class="l_faq_section">
+      The <b>project</b> notifications are configurable. By default you get them once a day. Assume you have 100 GitHub projects which get monitored by VersionEye. In that case you will not receive 100 emails every day ;-) You will receive 1 single project email per day with a summary about all your projects.
+    </p>
+    <p class="l_faq_section">
+      We try to send out as less emails as possible and as much as necessary!
+    </p>
+  
   </div>
 
 </div>
