--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -5,7 +5,7 @@
 <div class="span8">
 
   <div class="span8 content_header_def" >
-    Your latest notificaitons for the software packages you follow directly. 
+    Your latest notifications for the software packages you follow directly. 
     <a href="<%= url_for(favoritepackages_user_url(current_user)) %>.rss"><%= image_tag "rss.png", :title => "Subscribe via RSS", :alt => "Subscribe via RSS" %></a>
   </div>
 
