#612 Refactor Feedback Feature.

--- a/app/views/shared/_social_buttons.html.erb
+++ b/app/views/shared/_social_buttons.html.erb
@@ -31,11 +31,10 @@
     </a>
   </div>
   <div>
-    <a href="#dialog_feedback" id="love_icon" role="button" data-toggle="modal">
+    <a href="https://bitbucket.org/versioneye/versioneye/issues" title="Feedback" id="love_icon" role="button" target="_TICKETS">
       <div class="btn-social btn-like rounded" ></div>
     </a>
   </div>
 </div>
 
-<%= render 'feedback/dialog_feedback' %>
 <% end %>
