--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -71,7 +71,7 @@
               </li>
               <li class="divider-vertical"></li>
               <li>
-                <a href="JavaScript: load_dialog_feedback()" title="Feedback" id="feedback_link">
+                <a href="https://bitbucket.org/versioneye/versioneye/issues" title="Feedback" id="feedback_link" target="_TICKETS">
                   <i class="icon-comment" ></i>
                 </a>
               </li>
