Disable visual dependencies for Python & R

--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -138,9 +138,11 @@
             <div>
               <%= render partial: "project_dependency_table", locals: {deps: @child.sorted_dependencies_by_rank} %>
             </div>
-            <div style="padding-top: 7px;">
-              <%= link_to "Visual Dependencies", visual_user_project_path( @child ) %>
-            </div>
+            <% if !@child.language.to_s.eql?(Product::A_LANGUAGE_PYTHON) && !@child.language.to_s.eql?(Product::A_LANGUAGE_R) %> 
+              <div style="padding-top: 7px;">
+                <%= link_to "Visual Dependencies", visual_user_project_path( @child ) %>
+              </div>
+            <% end %> 
           </div>
 
           <div id="licenses" class="tab-pane">
