--- a/app/views/shared/_dialog_dependency_badge.html.erb
+++ b/app/views/shared/_dialog_dependency_badge.html.erb
@@ -49,8 +49,9 @@
     </form>
 
     <script type="text/javascript">
-      image_url = document.URL.split("?")[0] + "/badge.svg?style=flat";
-      url       = document.URL.split("?")[0]
+      purl = document.URL.split("#")[0].split("?")[0]
+      image_url = purl + "/badge.svg?style=flat";
+      url       = purl 
       <% if @product && !@product.version.to_s.empty? %>
         image_url = "<%= product_version_badge_url(:lang => @product.language_esc, :key => @product.to_param, :version => Version.encode_version(@product.version) ) %>" + ".svg";
         url = "<%= package_version_url(:lang => @product.language_esc, :key => @product.to_param, :version => Version.encode_version(@product.version)) %>";
