--- a/app/views/settings/plan/index.html.erb
+++ b/app/views/settings/plan/index.html.erb
@@ -13,7 +13,7 @@
       Open source projects are for free! We only charge a small fee for monitoring project files in private GitHub/Bitbucket repositories.<br/>
       <% if current_user.free_private_projects > 0 %>
         <br/>
-        There are <b><%= current_user.free_private_projects %></b> private projects assigned to your account, for free!
+        You can monitor <b><%= current_user.free_private_projects %></b> project files in private repositories, for free! 
       <% end %>
     </p>
     <hr />
