--- a/app/views/layouts/email_html_layout.html.erb
+++ b/app/views/layouts/email_html_layout.html.erb
@@ -56,8 +56,8 @@
                     font-size: 10px;
                     color: gray;" >
 
-          VersionEye GmbH | Rudolf-Breitscheid-Strasse 187 | 14482 Potsdam | Germany |
-          E-Mail: contact@versioneye.com | Amtsgericht: Berlin / Charlottenburg | Handelsregister: Berlin, HRB 144242 B | USt-IdNr.: DE282045007 | CEO: Robert Reiz | <a href="https://www.versioneye.com/imprint?utm_medium=email">Imprint</a><br/> Unsubscribe here: <a href="https://www.versioneye.com/settings/notifications?utm_medium=email">Notification Center</a>
+          VersionEye GmbH | Neckarauer-Waldweg 27 | 68199 Mannheim | Germany |
+          E-Mail: contact@versioneye.com | Amtsgericht: Mannheim | Handelsregister: Mannheim, HRB 720830 | USt-IdNr.: DE282045007 | CEO: Robert Reiz | <a href="https://www.versioneye.com/imprint?utm_medium=email">Imprint</a><br/> Unsubscribe here: <a href="https://www.versioneye.com/settings/notifications?utm_medium=email">Notification Center</a>
       </div>
 
     </div>
