--- a/app/views/page/imprint.html.erb
+++ b/app/views/page/imprint.html.erb
@@ -8,15 +8,15 @@
     <address>
       <strong>VersionEye GmbH</strong><br/>
       <br />
-      Rudolf-Breitscheid-Straße 187<br/>
-      14482 Potsdam<br/>
+      Neckarauer-Waldweg 27<br/>
+      68199 Mannheim<br/>
       Germany<br/>
       <br/>
       E-Mail: contact [at] versioneye.com<br />
       Tel: +49 621 18068183<br />
       <br />
-      Amtsgericht: Potsdam<br />
-      Handelsregister: Potsdam, HRB 26748 P<br />
+      Amtsgericht: Mannehim<br />
+      Handelsregister: Mannheim, HRB 720830<br />
       USt-IdNr.: DE282045007<br />
       CEO: Robert Reiz<br />
     </address>
