--- a/app/views/settings/payments/receipt.html.erb
+++ b/app/views/settings/payments/receipt.html.erb
@@ -159,7 +159,7 @@ table.list .center {
   </p>
   <hr>
   <div >
-    VersionEye GmbH | Rudolf-Breitscheid-Strasse 187 | 14482 Potsdam | Germany | E-Mail: contact@versioneye.com | Amtsgericht: Potsdam | Handelsregister: Potsdam, HRB 26748 P | USt-IdNr.: DE282045007 | CEO: Robert Reiz.
+    VersionEye GmbH | Neckarauer-Waldweg 27 | 68199 Mannheim | Germany | E-Mail: contact@versioneye.com | Amtsgericht: Mannheim | Handelsregister: Mannheim, HRB 720830 | USt-IdNr.: DE282045007 | CEO: Robert Reiz.
     <a href="https://www.versioneye.com/imprint">Imprint</a>.
   </div>
   <br/>
