--- a/app/views/settings/payments/receipt_footer.html
+++ b/app/views/settings/payments/receipt_footer.html
@@ -25,8 +25,8 @@
   <body>
       <hr>
       <div >
-        VersionEye GmbH | Rudolf-Breitscheid-Strasse 187 | 14482 Potsdam | Germany |
-        Amtsgericht: Potsdam | Handelsregister: Potsdam, HRB 26748 P | USt-IdNr.: DE282045007 |
+        VersionEye GmbH | Neckarauer-Waldweg 27 | 68199 Mannheim | Germany | 
+        Amtsgericht: Mannheim | Handelsregister: Mannheim, HRB 720830 | USt-IdNr.: DE282045007 
         E-Mail: contact@versioneye.com | CEO: Robert Reiz
       </div>
   </body>
