--- a/app/views/user/projects/helpers/_license_whitelist_picker.html.erb
+++ b/app/views/user/projects/helpers/_license_whitelist_picker.html.erb
@@ -12,7 +12,10 @@
           <% @whitelists.each do |list| %>
             <option value="<%= list.name %>" <%= @project.license_whitelist.to_s.eql?(list.name) ? 'selected' : '' %> ><%= list.name %></option>
           <% end %>
-        </select> <button type="submit" class="btn btn-primary" >Save</button> <button type="button" onclick="window.location.href='/settings/license_whitelists'" class="btn btn-success" >Manage Whitelists</button>
+        </select> <button type="submit" class="btn btn-primary" >Save</button> 
+        <% if !Rails.env.enterprise? %>
+          <button type="button" onclick="window.location.href='/settings/license_whitelists'" class="btn btn-success" >Manage Whitelists</button>
+        <% end %> 
       </div>
     </div>
   </form>
