Update privacy text in the project settings.

--- a/app/views/user/projects/_project_settings.html.erb
+++ b/app/views/user/projects/_project_settings.html.erb
@@ -35,8 +35,8 @@
 
     <form action="<%= save_visibility_user_project_path(@project) %>" method="post" class="form-horizontal" >
       <div>
-        All projects are private by default. Only you and your collaborators can see it.<br/>
-        By setting it to public you allow everyone to see the dependencies and licenses of this project.
+        All projects are public by default. Everybody who knows the URL to the project can see the dependencies and the licenses of the project.
+        By setting it to private only you and your collaborators can see this project!
       </div>
       <div class="control-group">
         <div class="controls" style="margin-left: 0px;">
