--- a/app/views/page/imprint.html.erb
+++ b/app/views/page/imprint.html.erb
@@ -15,7 +15,7 @@
       E-Mail: contact [at] versioneye.com<br />
       Tel: +49 621 18068183<br />
       <br />
-      Amtsgericht: Mannehim<br />
+      Amtsgericht: Mannheim<br />
       Handelsregister: Mannheim, HRB 720830<br />
       USt-IdNr.: DE282045007<br />
       CEO: Robert Reiz<br />
