BugFix for wrong link in footer!

--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -20,7 +20,7 @@
   <div class="container row footer_social_media_row" >
     <a href="https://twitter.com/VersionEye" class="footer_link_margin" target="new_Twitter" title="Twitter" ><i class="icon-twitter footer_social_icon" ></i></a>
 
-    <a href="https://www.youtube.com/channel/UCWYgVVJ3PD3S9fbvbjR6ZyQ/videos" class="footer_link_margin" target="new_FB" title="Facebook" ><i class="icon-facebook footer_social_icon" ></i></a>
+    <a href="https://www.facebook.com/VersionEye" class="footer_link_margin" target="new_FB" title="Facebook" ><i class="icon-facebook footer_social_icon" ></i></a>
 
     <a href="https://plus.google.com/+Versioneye/posts" class="footer_link_margin" target="new_GP" title="Google+" ><i class="icon-google-plus footer_social_icon" ></i></a>
 
