Update the enterprise text

--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -14,6 +14,24 @@
   </div>
 
   <div class="well-white l_lp_well_margin" >
+    <p>
+      Because software libraries don't update themselves, enterprise grade software projects need a reliable and automatic notification system for changes in software libraries.
+    </p>
+    <p>
+      VersionEye Enterprise now brings the best practice successfully used in open source development to the enterprise world! Running in-house on your own server it is fully integrated with your existing software development infrastructure and processes!
+    </p>
+    <p>
+      <ul>
+        <li>Support for both - open source and proprietary software components.</li>
+        <li>Better software quality in agile software development.</li>
+        <li>Lower risks and better compliance.</li>
+        <li>Higher productivity of your software development team.</li>
+        <li>Better leverage of open source components.</li>
+      </ul>
+    </p>
+  </div>
+
+  <div class="well-white l_lp_well_margin" >
     <h2 class="no_margin">What is VersionEye doing for me?</h2>
     <div class="row">
       <div class="cell2 pull-left">
