Update Landing Page + ELP

--- a/app/views/products/helpers/_big_search.html.erb
+++ b/app/views/products/helpers/_big_search.html.erb
@@ -22,4 +22,7 @@
     <% end %>
     </span>
   </div>
+  <div style="margin-top: 25px; text-align: center; font-family: 'Droid Serif'; font-size: 16px;">
+    CONTINUOUS UPDATING
+  </div>
 </div>
