--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,6 @@
 <%= render 'layouts/header' %>
 
 <div id="search_container" class="container" style="margin-top: 80px;" >
-
   <div class="l_lp_well_margin" >
     <div style="text-align: center;">
       <h1>Notification System for Software Libraries</h1>
@@ -12,7 +11,10 @@
       <%= render "/products/helpers/big_search" %>
     </div>
   </div>
+</div>
 
+<div id="features" class="container">
+  <%= render "/shared/features" %>
 </div>
 
 <div id="integration" class="container">
