--- a/app/views/users/_signup_form.html.erb
+++ b/app/views/users/_signup_form.html.erb
@@ -1,7 +1,7 @@
 
   <div class = "marketing" >
     <h2 class="no_margin"> It's free to sign up! </h2>
-    <p> Join today and track your repositories. </p>
+    <p> Join today and track your dependencies. </p>
   </div>
 
   <%= form_for @user, :html => {:class => 'form-horizontal'} do |f| %>
