--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -142,30 +142,32 @@
             
             <%= render partial: "user/projects/helpers/show_subprojects", locals: {parent_project: @project, child_project: @child, tab_id: 'dependencies'} %>
 
-            <div class="pull-right">
-              <form action="<%= followall_user_project_path(@child) %>" method="post" style="margin: 0;">
-                <button class="btn btn-success btn-mini" title="Follow all software packages in this project and receive notifications independently from this project">Follow All</button>
-              </form>
-            </div>
-            <div>
-
-              <% @child.scopes.each do |scope| %>
-                <% deps = @child.dependencies( scope ) %>
-                <% if deps && !deps.empty? %>
-                  <% deps = deps.sort_by {|dep| dep[:status_rank] } %> 
-                  <div style="padding-top: 15px;">
-                    <span style="color: gray;"><%= scope %> scope</span>
-                    <%= render partial: "project_dependency_table", locals: {deps: deps } %>
-                  </div>
-                <% end %>
-              <% end %> 
-
-            </div>
-            <% if !@child.language.to_s.eql?(Product::A_LANGUAGE_PYTHON) && !@child.language.to_s.eql?(Product::A_LANGUAGE_R) %> 
-              <div style="padding-top: 7px;">
-                <%= link_to "Visual Dependencies", visual_user_project_path( @child ) %>
+            <% if @child.dependencies && !@child.dependencies.empty? %>
+              <div class="pull-right">
+                <form action="<%= followall_user_project_path(@child) %>" method="post" style="margin: 0;">
+                  <button class="btn btn-success btn-mini" title="Follow all software packages in this project and receive notifications independently from this project">Follow All</button>
+                </form>
               </div>
-            <% end %> 
+              <div>
+                <% @child.scopes.each do |scope| %>
+                  <% deps = @child.dependencies( scope ) %>
+                  <% if deps && !deps.empty? %>
+                    <% deps = deps.sort_by {|dep| dep[:status_rank] } %> 
+                    <div style="padding-top: 15px;">
+                      <span style="color: gray;"><%= scope %> scope</span>
+                      <%= render partial: "project_dependency_table", locals: {deps: deps } %>
+                    </div>
+                  <% end %>
+                <% end %> 
+              </div>
+              <% if !@child.language.to_s.eql?(Product::A_LANGUAGE_PYTHON) && !@child.language.to_s.eql?(Product::A_LANGUAGE_R) %> 
+                <div style="padding-top: 7px;">
+                  <%= link_to "Visual Dependencies", visual_user_project_path( @child ) %>
+                </div>
+              <% end %> 
+            <% else %> 
+              No dependencies available for <b><%= @child.name %></b>
+            <% end %>
           </div>
 
           <div id="licenses" class="tab-pane">
