--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -243,11 +243,14 @@
 
   <div class="well-white l_lp_well_margin" >
 
-    <%= form_tag( enterprise_create_path, :method => "post", :class => "form-horizontal") do  %>
+    <h2 class="no_margin">Interested?</h2>
 
-      <p class="description" style="padding-bottom: 15px;">
-        Please fill out the form bellow if you are interested in VersionEye Enterprise. We will contact you soon. 
-      </p>
+    <p style="padding-top: 15px;">
+      Please fill out the form bellow if you are interested in VersionEye Enterprise. We will contact you soon. 
+    </p>
+
+    <p style="padding-top: 15px;">
+    <%= form_tag( enterprise_create_path, :method => "post", :class => "form-horizontal") do  %>
 
       <div class="control-group">
         <%= label_tag :scm, "Git Server", :class => "control-label", :for => "scm" %>
@@ -330,6 +333,7 @@
       </div>
 
     <% end %>
+    </p>
 
   </div>
 
