Update Enterprise text

--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -15,13 +15,21 @@
 
   <div class="well-white l_lp_well_margin" >
     <p>
-      Because software libraries don't update themselves, enterprise grade software 
-      projects need a reliable and automatic notification system for changes in software libraries.
+      Enterprise grade software projects are complex, products contain many libraries 
+      from inside and outside of the enterprise, development is spread over many locations. 
+      It is a tough job for developers and managers to keep up with changes of a multitude of 
+      software libraries.
     </p>
     <p>
-      VersionEye Enterprise now brings the best practice successfully used in open source development 
-      to the enterprise world! Running in-house on your own server it is fully integrated with your 
-      existing software development infrastructure and processes!
+      You wish you had a reliable and automatic notification system for changes in software libraries, because software libraries don't update themselves? 
+    </p>
+    <p> 
+      <b>You need VersionEye Enterprise!</b>      
+    </p>
+    <p>
+      VersionEye Enterprise brings the best practices from open source development to 
+      the enterprise world! It runs on your own server and it is fully integrated with 
+      your existing software development infrastructure and processes! 
     </p>
     <p>
       <ul>
