Link to the VersionEye Enterprise Landing Page!

--- a/app/views/products/helpers/_how.erb
+++ b/app/views/products/helpers/_how.erb
@@ -72,9 +72,8 @@
       <div class="span9">
         <h4 class="integration_header"> Enterprise </h4>
         <p class="integration_desc">
-          Run the VersionEye Enterprise VM on-premise in your company and integrate it with your own systems.
-          It can be integrated with GitHub Enterprise, Nexus Pro, CocoaPods, MS Exchange Server (SMTP) and many more.<br/>
-          For any questions, contact us at <a href="mailto:support@versioneye.com">support@versioneye.com</a>!
+          Run <%= link_to 'VersionEye Enterprise', enterprise_path %> on your own server! Integrated with your private repositories and your continuous integration system!
+          <%= link_to 'Read more here', enterprise_path %>!
         </p>
       </div>
     </div>
