--- a/app/views/users/_signup_form.html.erb
+++ b/app/views/users/_signup_form.html.erb
@@ -34,8 +34,8 @@
     <% if Settings.instance.show_promocode %>
       <div class="control-group">
           <%= f.label :promo_code,  :class => "control-label", :for => "promo_code" %>
-        <div class="controls">
-          <%= f.text_field :promo_code, :id => "promo_code" %>
+        <div class="controls" style="padding:0">
+          <%= f.text_field :promo_code, :id => "promo_code" %> opt.
         </div>
       </div>
     <% end %>
