Add XING cite to Enterprise Landing Page!

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -114,3 +114,11 @@ h3 code {
 .large_font{
   font-size: 18px;
 }
+
+cite { 
+    font-style: italic;
+}
+
+.cite_section {
+  padding-top: 10px;
+}
