Update enterprise lp

--- a/app/views/enterprise/show.html.erb
+++ b/app/views/enterprise/show.html.erb
@@ -48,19 +48,19 @@
   <div class="well-white l_lp_well_margin" >
     <h2 class="no_margin">Who is using it?</h2>
     <p style="padding-top: 15px;">
-      We have currently a handfull Enterprise clients. The very first client was <a href="https://www.xing.com">XING</a>! 
+      The very first client was <a href="https://www.xing.com">XING</a>! 
     </p>
     <p class="cite_section">
       <cite>“Automated version notifications of open source and self developed closed source components by VersionEye Enterprise are very helpful especially to our distributed iOS teams. They help reducing coordination and communication efforts. The VersionEye team always did a great job supporting us with individual features!”</cite><br/>
       <div>
-        <%= image_tag 'cites/alexander-greim_75.jpg'  %> <b>Alexander Greim (Director Mobile Engineering @ <a href="https://www.xing.com">XING</a> AG)</b>
+        <%= image_tag 'cites/alexander-greim_75.jpg', :class => "img-rounded" %> <b>Alexander Greim (Director Mobile Engineering @ <a href="https://www.xing.com">XING</a> AG)</b>
       </div>
     </p> 
     <p>
       Download the full customer success story with XING <a href="/docs/XING-Customer-Success-Story.pdf">here</a>. 
     </p>
     <p>
-      More success stories are coming soon! Our other Enterprise clients are bigger than XING and that's why the approval process takes a bit longer for them. 
+      More success stories are coming soon! The other Enterprise clients are bigger than XING and that's why the approval process takes a bit longer for them. 
     </p>
   </div>
 
